--- a/PSTAT134_YelpFinal.qmd
+++ b/PSTAT134_YelpFinal.qmd
@@ -16,30 +16,52 @@ This project utilizes a precompiled dataset from Yelp known as the Yelp Open Dat
 
 Due to the dataset being in JSON format, initial data cleaning was required. The file, \`get_data.R\`, retrieves the JSON file and converts the data into a more readable format as multiple CSV files. The script processes the JSON file in chunks of 1,000 lines and saves processed chunks of data into .rds files every 1,000,000 lines to prevent memory overload. 
 
-The file, \`dataset.R\`, is the script in which the CSV files are unified and unnecessary variables are dropped, such as the \`friends\` column.  This file results in a final and cleaned \`dataset.csv\` file with over one million observations (reviews). The variables in this file are user_id, business_id, review_stars, vote_useful, vote_funny	, vote_cool, text, city, business_stars, business_review_count, categories, user_review_count, yelping_since, user_useful, user_funny, user_cool, elite, fans, average_stars, compliment_hot, compliment_more, compliment_profile, compliment_cute, compliment_list	compliment_note, compliment_plain, compliment_cool, compliment_funny, compliment_writer	compliment_photos, tip_compliment_count, total_vote, and total_compliments.
+The file, \`dataset.R\`, is the script in which the CSV files are unified and unnecessary variables are dropped, such as the \`friends\` column.  This file results in a final and cleaned \`dataset.csv\` file with over one million observations (reviews). The variables in this file are user_id, business_id, review_stars, vote_useful, vote_funny , vote_cool, text, city, business_stars, business_review_count, categories, user_review_count, yelping_since, user_useful, user_funny, user_cool, elite, fans, average_stars, compliment_hot, compliment_more, compliment_profile, compliment_cute, compliment_list compliment_note, compliment_plain, compliment_cool, compliment_funny, compliment_writer compliment_photos, tip_compliment_count, total_vote, and total_compliments.
 
 ### Setup
 
 #### Installing Packages
 
 ```{r, results='hide'}
+rm(list=ls())
+gc() 
 library(tidyverse)
 library(tidymodels)
-library(tidytext)
-library(kableExtra)
 library(ggplot2)
-library(stopwords)
-library(wordcloud)
-library(reshape2)
+library(stringr)
 library(igraph)
 library(ggraph)
+library(tidytext)
+library(wordcloud)
+library(stringr)
+library(textTinyR)
+library(tm)
+library(e1071)
+library(tidyr)
+library(caret)
+library(naniar)
+library(data.table)
+library(shiny)
+library(htmltools)
+library(kableExtra)
+library(tidyr)
+
+
 ```
 
 #### Load in Dataset
 
 ```{r}
-yelp <- read.csv("~/Downloads/dataset.csv")
+yelp <- fread("cleaned_dataset.csv")
 ```
+
+### Checking NA values
+
+```{r}
+vis_miss(yelp, warn_large_data = FALSE) 
+```
+
+/////commetns
 
 ### Distribution of Reviewers' Star Ratings
 
@@ -54,7 +76,8 @@ yelp %>%
     x = "Reviews' Star Ratings",
     y = "Count"
   ) +
-  scale_y_continuous(labels = comma) +
+  scale_y_continuous(labels = comma) +  
+  geom_text(stat = 'count', aes(label = after_stat(count)), vjust = -0.3) +
   theme_minimal()
 ```
 
@@ -65,7 +88,7 @@ We stratify on `review_stars` to ensure that we are able to capture a representa
 ```{r}
 yelp_sample <- yelp %>% 
   group_by(review_stars) %>%
-  sample_frac(10000 / nrow(yelp)) %>%
+  sample_frac(1000000 / nrow(yelp)) %>%
   ungroup()
 ```
 
@@ -81,8 +104,11 @@ yelp_sample %>%
     y = "Count"
   ) +
   scale_y_continuous(labels = comma) +
+  geom_text(stat = 'count', aes(label = after_stat(count)), vjust = -0.3) +
   theme_minimal()
+
 ```
+
 
 ### Data Cleaning
 
@@ -122,53 +148,84 @@ yelp_sample %>%
   anti_join(stop_words) %>% # removing stop words
   count(word, sort = TRUE) %>% 
   head(n = 30) %>% 
-  kbl() %>%
+  kbl() %>% 
   scroll_box(width = "400px", height = "500px")
 ```
 
 #### Most Common Words
+
+#coment on common words
 
 ```{r}
 yelp_sample_tokenized <- yelp_sample %>% 
   unnest_tokens(word, text) %>% 
   anti_join(stop_words)
 
-yelp_sample_tokenized %>%
+word_counts <- yelp_sample_tokenized %>%
   count(word, sort = TRUE) %>%
-  filter(n > 1000) %>%
-  mutate(word = reorder(word, n)) %>%
-  ggplot(aes(n, word)) +
+  filter(n > 10000) %>%
+  mutate(word = reorder(word, n))
+
+ggplot(word_counts[1:20,], aes(n, word)) +
   geom_col() +
   labs(y = NULL) +
   theme_minimal()
+
 ```
 
 ```{r}
-yelp_sample_tokenized %>%
+word_counts_by <- yelp_sample_tokenized %>%
   count(review_stars, word, sort = TRUE) %>%
   filter(n > 600) %>%
-  mutate(word = reorder_within(word, n, review_stars)) %>%
-  ggplot(aes(x = n, y = word, fill = review_stars)) +
+  mutate(word = reorder_within(word, n, review_stars))
+  
+word_counts_1to3 <- word_counts_by %>%
+  filter(review_stars %in% 1:3)
+
+word_counts_4to5 <- word_counts_by %>%
+  filter(review_stars %in% 4:5)
+
+plot_1to3 <- ggplot(word_counts_1to3[1:40, ], aes(x = n, y = word, fill = review_stars)) +
   geom_col(show.legend = FALSE) +
   facet_wrap(~review_stars, scales = "free_y", 
              labeller = labeller(review_stars = function(x) paste(x, "Stars"))) +
   scale_y_reordered() +
-  labs(title = "Most Common Words by Reviewers' Star Rating",
+  labs(title = "Most Common Words for Ratings 1 to 3",
        x = "Frequency",
        y = NULL) +
   theme_minimal()
+
+plot_4to5 <- ggplot(word_counts_4to5[1:40, ], aes(x = n, y = word, fill = review_stars)) +
+  geom_col(show.legend = FALSE) +
+  facet_wrap(~review_stars, scales = "free_y", 
+             labeller = labeller(review_stars = function(x) paste(x, "Stars"))) +
+  scale_y_reordered() +
+  labs(title = "Most Common Words for Ratings 4 to 5",
+       x = "Frequency",
+       y = NULL) +
+  theme_minimal()
+
+print(plot_1to3)
+print(plot_4to5)
 
 ```
 
 #### Word Cloud
 
+#comment on the positive and negative meaning
+
 ```{r}
-yelp_sample_tokenized %>%
+sentiment_counts <- yelp_sample_tokenized %>%
   inner_join(get_sentiments("bing")) %>%
   count(word, sentiment, sort = TRUE) %>%
-  acast(word ~ sentiment, value.var = "n", fill = 0) %>%
-  comparison.cloud(colors = c("red", "blue"),
-                   max.words = 100)
+  acast(word ~ sentiment, value.var = "n", fill = 0)
+
+comparison.cloud(sentiment_counts,
+                 colors = c("red", "blue"),
+                 max.words = 50, 
+                 scale = c(2.5, 0.5),
+                 random.order = FALSE,
+                 title.size = 1.5)
 ```
 
 #### Bigram Networks
@@ -186,7 +243,7 @@ yelp_bigrams <- yelp_sample %>%
 neg_bigrams <- yelp_bigrams %>%
   filter(review_stars %in% c(1, 2)) %>%
   count(word1, word2) %>%
-  filter(n > 50) %>%
+  filter(n > 150) %>%
   graph_from_data_frame()
 
 a <- grid::arrow(type = "closed", length = unit(.15, "inches"))
@@ -196,15 +253,14 @@ ggraph(neg_bigrams, layout = "fr") +
                  arrow = a, end_cap = circle(.07, 'inches')) +
   geom_node_point(color = "lightblue", size = 5) +
   geom_node_text(aes(label = name), vjust = 1, hjust = 1) +
-  labs(title = "Bigram Network for One and Two Star Reviews") +
-  theme_void()
+  labs(title = "Bigram Network for One and Two Star Reviews") 
 ```
 
 ```{r}
 pos_bigrams <- yelp_bigrams %>%
   filter(review_stars %in% c(4, 5)) %>%
   count(word1, word2) %>%
-  filter(n > 50) %>%
+  filter(n > 400) %>%
   graph_from_data_frame()
 
 a <- grid::arrow(type = "closed", length = unit(.15, "inches"))
@@ -214,6 +270,5 @@ ggraph(pos_bigrams, layout = "fr") +
                  arrow = a, end_cap = circle(.07, 'inches')) +
   geom_node_point(color = "lightblue", size = 5) +
   geom_node_text(aes(label = name), vjust = 1, hjust = 1) +
-  labs(title = "Bigram Network for One and Two Star Reviews") +
-  theme_void()
+  labs(title = "Bigram Network for Four and Five Star Reviews") 
 ```
